# tomb

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.build  Dockerfile.build.x86_64  Dockerfile.flatpak  Dockerfile.tauri  FRONTEND_BLOB_ID_INTEGRATION_COMPLETE.md  Makefile  Makefile.bak  README.md  config.jsonc  docker-compose.yml  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs  music.rs  photos.rs  videos.rs
cli/tests/: README.md  mod.rs
client-codegen/: Cargo.toml  Makefile  README.md
client-codegen/freqhole-api-client/: auth-test.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client-codegen/src/: generator.rs  main.rs
client/midden/: Cargo.toml  Makefile  README.md
client/rathole/: Cargo.toml  Makefile  README.md  index.html
client/reliquary/: Cargo.toml
client/rust/: Cargo.toml
codegen-spike/: Cargo.toml  Makefile  README.md
codegen-spike/freqhole-api-client/: package-lock.json  package.json  test.ts  tsconfig.json
codegen-spike/src/: main.rs
grimoire/: Cargo.toml  Makefile  build.rs
grimoire/.sqlx/: query-002617bb79e4e67c844f1506bc580d00bb631e1ffb2415eb92085297146ce307.json  query-003d419f637b87672f1b99b3da9c0742373b05cfb92456bbfd5006d14ca04fbe.json  query-010bc90a90c0c7199e34a7ad76401a15edb9b1971b619e13cace547c1677fbe9.json  query-016d86290469c4cf8f64203551355bcdd6c3ffef613934de7841a713b925fb6f.json  query-02734b48becd5f818367da3c4839d3656b402cfd9779a76a99f98fc218f291f0.json  query-027bca202dfced5be5f5baa28ec7f2fb5e62b91b9a93479f5080cfb26c672425.json  query-028496406034b62c5ac424ff83f449553eeb6846cbfe6e0341c0bbd8e2ebc5c5.json  query-02bcceef18a0c04e5a75bb6285c4eb9cb6df110cd2247c2fe7c22dc925d4e4b2.json  query-02f604b96bc2021be7930cfe83a9625a928775bcc21a13b39635c30543563d6a.json  query-02fc68e947c516fc2905485a07f87b2a54ef7b4675ceb7ac2323afca3031f1dc.json  query-0489f3b51ac239ba68c826e730f01c0c2382b42fdeaf9468d41f6846e607a122.json  query-052f43c1b169dd5455f7695e9ebad9dd97d593fb038433bbfc121a5888260def.json  query-0533bf467d3a76073c02648dec347babdf964193be319b9c190364ca2c92759e.json  query-0648a7207ad8586759ea0f5625e24b8f740c8690ada26a86dc506cb5eff7bec8.json  query-06c511762092e1de193fa06fb2df78d52b1b91d66ba95f2f23bab4529a6e2459.json  query-06d350eeb2294ca4580c6950e3e5dcd646f369f4a098d070ac62f5dd44c7df7e.json  query-06f09f16f2a6921f303ca89fb4dc65adf6ce97a9ab0fda3bf135d5a5fad4713b.json  query-073369bc3ab50bc463a88eb5270ee25a7fe3c18cd8d8e51259f4d7a304cc2331.json  query-0857a85d20b048bdf02dbbd39aa400a6b9743272542c81c4bfd42b1f299f4ace.json  query-086814c58c3ea427bf973e6da82b41c57b1e50ab2351202bbb9e3bcce07e17bd.json  query-089c476b3786a94310e626640f9eb267c8a2865c4f0f649ad6953ac6b4bbbeb2.json  query-092536baaa434885128977a08585ea061ee4886c4a1c3de9c4a2295e6046b9ce.json  query-09916a69f409aaf9642b208f8d5e45ae9a9408518b4dce69d59764c834896ce7.json  query-0a2d05b74cc36c1301c87a5ff4f0f663bb851949c0745c271593d63b4251b779.json  query-0a41804e70205ac56a941a80ed86cb91cda4327319f7cf7f7f1344631e8e573c.json  query-0ab4a7394975cf5551127c925cc149c28524484eddcbf9fc18ae9c54c6576122.json  query-0b14aae6af34ee71b042cdf55f647c3c34ba4e7538c8b054f1d65fffcbad30f2.json  query-0b7f6f71bcc729ec6c100a8f870e5cfd87ccbe775f675f17a5ca45d5a4735ce0.json  query-0c18cbbdd9e2d7a8ad8d3a2353029a4ee4ff8cd789978e7b183b55ef954ff0a6.json  query-0c8938a844c2ee84446f5fc80cc8625d3d4b93154627b6bc22e4f6589eb9fabd.json  query-0d14ca99ba4b79cc089468a6ffea02715cf6f63d0f021fc7740516faab94133c.json  query-0efb33dc489624ec7703dd5e88634e0f3de321af59dd1e4c7315b10b3fd41ce2.json  query-0f2583dc18b7077a54efac68c4888c3bde2073ae71937af30160627a357f745b.json  query-0f9cb961edb6f8728d94844435cee5a82099f3a7302be9b00263438ed6372108.json  query-0fda1d603ebb26ac877b827a2599e6d29dd655170b6530e7a8779dc655c1db60.json  query-10f4de65e96f5bd433aae52372d430077ce8153ab1223760a75c84b0767b30b9.json  query-11493564feefd89873bc87558d52ac0c975cf31dd5c7ee47887b0dbd4aef7904.json  query-1161914a624dec012caf2a9e436657c94b5eb6363bc88676e36565ed307b1b05.json  query-117fa0f360749e8af48c8751da584d6579c10d89dc47b404ed3513dd187f72c1.json  query-1213b5b57a816ceb199b6e1818fb215961083d4e51bfcb4134237a82cd5d5d03.json  (+436 more)
grimoire/examples/: media_type_detection.rs  music_notifications.rs  smart_title_builder.rs
grimoire/src/: cli.rs  config.rs  database.rs  error.rs  events.rs  health.rs  lib.rs  main.rs  metadata.rs  paths.rs  progress.rs  response.rs  sessions.rs  shutdown.rs  slow_query.rs  updates.rs
grimoire/tests/: mod.rs
legacycli/: Cargo.toml
legacycli/src/: main.rs  photos.rs  videos.rs
ruhroh/: Cargo.toml  README.md  demo.sh
ruhroh/ruhroh-client/: Cargo.toml
ruhroh/ruhroh-wasm/: Cargo.toml  Makefile  README.md
server/: Cargo.toml  build.rs
server/.sqlx/: query-06bcdb431d08aff79fa0cdac11ec9db63e410c09fa6a8c2259fd4aa12ea00b30.json  query-076b548c026487ec7d56c28c7b6c023400a96af3a531ca6717688872488fd417.json  query-08058f21f50356a914030c137eac5cf3719095223f2c5f6c3c4150df8de65592.json  query-0883f9a7c420d5d252aaf3d8890663d7fab788f39ed13730e0916519801888f1.json  query-0d292fc64fcaa23751e89456b40ddaaba0086c1e028b58e6f290dc1d9839eeac.json  query-0d2c67a5910da67db85df8a988a660be14d6d32083a42cab09807bf70037789d.json  query-1449510df8112a4c825730f77baee9330691c0f2e29db41cf7818567ad9c9fc3.json  query-16d73b98d9321b44609e7f9dfc43bc998af4f5fd9b9de51efb34cc7990140b3c.json  query-197eae37898d5844bb22c62f872074eec9708f98697b002aa692e41d102621ac.json  query-1c02e3da3d6275200a901049dd916be5694ff10518d7093db19590a50f95e1ec.json  query-258ed11729b661237a9aa2915e8b62aaa0f86c59d8533a07cdb84b97420ea943.json  query-27f2e413039862ef3552c599dd19ef02e76b96bddb192833de8b516cb02d49dd.json  query-2db02d9f313b89f5392d4b2b5f92663d85089403640e3719be8d082bec8ec234.json  query-34674920bb354b2361aac32678238b15228bd7cccfa77ed0eb9bfad763e62deb.json  query-348975b80dbee42ae3708f396527b0914bcc9a2ddd6eb70ec2a7da565b6e5629.json  query-34aff02c82d63fc8e55c004269c7e74b04c574ebf732363f0122896e73b63b1c.json  query-43423e58c655a75f4771b095e8246a773904df2b43e6640d8aa253032d6b7613.json  (+44 more)
(+4079 files in other folders)
