[workspace]
members = [
    "grimoire",
    "cli",
    "server",
    "client-codegen",
    "client/tauri/src-tauri",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "multipart"] }
futures-util = "0.3"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"
json5 = "0.4"
num-traits = "0.2"
rand = "0.8"
regex = "1.0"
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
    "bigdecimal",
    "migrate",
] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
shell-words = "1.1"
mime_guess = "2.0"
httpdate = "1.0"
tower-http = { version = "0.6", features = [
    "fs",
    "compression-gzip",
    "compression-br",
    "set-header",
    "trace",
    "cors",
] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.4"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation",
] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
testcontainers = "0.20"
testcontainers-modules = { version = "0.8", features = ["postgres"] }
tempfile = "3.0"
serde_with = "3.0"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
lofty = "0.18"
walkdir = "2.4"
inquire = "0.7"
bigdecimal = { version = "0.4", features = ["serde"] }
image = "0.24"
