[package]
name = "cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "freqhole"
path = "src/main.rs"

[features]
default = ["server/webauthn"]
webauthn = ["server/webauthn"]

[dependencies]
grimoire = { path = "../grimoire", default-features = false }
server = { path = "../server", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
