[package]
name = "cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "rathole"
path = "src/main.rs"

[lib]
name = "cli"
path = "src/lib.rs"

[features]
default = ["server/webauthn", "rodio-playback"]
webauthn = ["server/webauthn"]
# enable native audio playback for the `freqhole player daemon`
# subcommand. propagates to grimoire's `rodio-playback` feature so
# `grimoire::player::spawn_player` is available. headless cross-
# compile targets without cpal can disable this with
# `--no-default-features --features webauthn`.
rodio-playback = ["grimoire/rodio-playback"]

[dependencies]
grimoire = { path = "../grimoire", default-features = false }
server = { path = "../server", default-features = false }
rathole = { path = "../client/rathole" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
