[package]
name = "client-codegen"
version.workspace = true
edition = "2021"

[[bin]]
name = "client-codegen"
path = "src/main.rs"

[dependencies]
# domain types and api registry
grimoire = { path = "../grimoire", default-features = false }

# server (needed to collect inventory routes)
server = { path = "../server" }

# codegen dependencies
zod_gen = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# compile-time route collection
inventory = "0.3"
