[package]
name = "client-codegen"
version.workspace = true
edition = "2021"

[[bin]]
name = "client-codegen"
path = "src/main.rs"

[dependencies]
# domain types, api registry, and offal routes
grimoire = { path = "../grimoire", default-features = false }

# codegen dependencies
zod_gen = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
