[package]
name = "codegen-spike"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zod schema generation
zod_gen = "1.0"
zod_gen_derive = "1.0"

# Axum for server prototype
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Compile-time registration
inventory = "0.3"
