[package]
name = "grimoire"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
    "json",
    "migrate",
] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
lofty = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
bigdecimal = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
shell-words = { workspace = true }
csv = "1.3"
urlencoding = "2.1"
once_cell = "1.19"
toml = "0.8"
toml_edit = "0.22"
unicode-normalization = "0.1"
dirs = "5"
which = "7"
include_dir = "0.7"
dialoguer = "0.11"
iroh = { workspace = true }
getrandom = "0.2"

clap = { version = "4.4", features = ["derive"] }
humantime = "2.1"
sea-query = { version = "0.30", features = ["backend-sqlite", "thread-safe"] }
sea-query-sqlx = { version = "0.8.0-rc.11", features = ["sqlx-sqlite"] }

tracing-subscriber = "0.3"

# api codegen support
inventory = "0.3"
zod_gen = "1.0"
zod_gen_derive = "1.0"


[features]
default = ["webauthn"]
webauthn = ["webauthn-rs"]
vendored-openssl = ["openssl"]

[dependencies.webauthn-rs]
workspace = true
optional = true

[dependencies.openssl]
workspace = true
optional = true
