[package]
name = "grimoire"
version.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
    "json",
    "migrate",
] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
lofty = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
bigdecimal = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
shell-words = { workspace = true }
csv = "1.3"
urlencoding = "2.1"
once_cell = "1.19"
toml = "0.8"
toml_edit = "0.22"
unicode-normalization = "0.1"
dirs = "5"
which = "7"
include_dir = "0.7"
dialoguer = "0.11"
iroh = { workspace = true }
iroh-blobs = { workspace = true }
blake3 = { workspace = true }
bytes = "1.10"
getrandom = "0.2"

clap = { version = "4.4", features = ["derive"] }
humantime = "2.1"
sea-query = { version = "0.30", features = ["backend-sqlite", "thread-safe"] }
sea-query-sqlx = { version = "0.8.0-rc.11", features = ["sqlx-sqlite"] }

tracing-subscriber = "0.3"

# native audio playback (rodio cargo feature). gated because cross-
# compile targets without alsa/coreaudio/wasapi can't link cpal.
rodio = { version = "0.22", default-features = false, features = [
    "playback",
    "symphonia-all",
    "tracing",
], optional = true }
# direct cpal dep so we can set `BufferSize::Fixed` explicitly. on
# linux this is the consensus fix for pipewire/pulseaudio underruns
# under gui load (see rodio#827); 2048 frames @ 48k is ~43ms with
# plenty of headroom. note: cpal 0.17 (rodio 0.22's pinned cpal) has
# no `pulseaudio` feature yet \u2014 that lands in cpal 0.18 / rodio 0.23.
# once rodio publishes against cpal 0.18 we should enable it here.
cpal = { version = "0.17", default-features = false, optional = true }

# api codegen support
zod_gen = "1.0"
zod_gen_derive = "1.0"


[features]
default = ["webauthn", "rodio-playback"]
webauthn = ["webauthn-rs"]
vendored-openssl = ["openssl"]
# rodio audio backend (uses cpal). disable for headless / cross-
# compile targets without an audio system available at link time.
rodio-playback = ["dep:rodio", "dep:cpal"]

[dependencies.webauthn-rs]
workspace = true
optional = true

[dependencies.openssl]
workspace = true
optional = true
