[package]
name = "legacycli"
version = "0.0.1"
authors = [
  "edward sharp <edward@edwardsharp.net",
]
edition = "2021"
license = "MIT"

[dependencies]
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
inquire.workspace = true
colored = "2.0"
console = "0.15"
image = "0.24"
sha2.workspace = true
server = { path = "../server" }
legacylib = { path = "../legacylib" }

[features]
default = []
