# ruhroh - iroh federation prototype
# standalone workspace, isolated from main freqhole code

[workspace]
members = ["ruhroh-client", "ruhroh-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# iroh networking
iroh = "0.96"
iroh-blobs = "0.98"
futures-lite = "2"
getrandom = "0.2"

# utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
