[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = ["webauthn"]
webauthn = ["dep:webauthn-rs"]

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
hex = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Optional webauthn (feature-gated)
webauthn-rs = { workspace = true, optional = true }

# Internal dependencies
grimoire = { path = "../grimoire" }

# Additional dependencies
mime_guess = { workspace = true }
futures-util = { workspace = true }
http = "1.0"
http-body-util = "0.1"
anyhow = "1.0"

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
