[package]
name = "server"
version.workspace = true
edition = "2021"

[features]
default = ["webauthn"]
webauthn = ["dep:webauthn-rs", "grimoire/webauthn"]

[dependencies]
# Workspace dependencies
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

# Optional webauthn (feature-gated)
webauthn-rs = { workspace = true, optional = true }

# Internal dependencies
grimoire = { path = "../grimoire", default-features = false }

# Additional dependencies
mime_guess = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
http = "1.0"
http-body-util = "0.1"
anyhow = "1.0"
httpdate = { workspace = true }
sha2.workspace = true

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
