[package]
name = "midden"
version = "0.1.3"
edition = "2021"
description = "WASM bindings for freqhole P2P client (iroh-based)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
iroh = "0.96"
js-sys = "0.3"
n0-future = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
