[package]
name = "reliquary"
version.workspace = true
edition = "2021"
description = "headless hub peer for skein canvas P2P ecosystem"

[dependencies]
# workspace deps
grimoire = { path = "../../grimoire", default-features = false }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

# keypair persistence
getrandom = "0.2"

# automerge doc sync
samod = { version = "0.9", features = ["tokio"] }
automerge = "0.8"
futures = "0.3"
indexmap = "2"
tokio-util = { workspace = true }
time = { workspace = true }
bytes = "1"
url = "2"
derive_more = { version = "2.0", features = ["debug"] }

# sqlite storage for automerge docs
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
futures = "0.3"
