[package]
name = "ruhroh-client"
version.workspace = true
edition = "2021"
description = "Peer client for ruhroh federation prototype (uses iroh)"

[[bin]]
name = "ruhroh-client"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
iroh = { workspace = true }
iroh-blobs = { workspace = true }
futures-lite = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
grimoire = { path = "../../grimoire", default-features = false }

# for reading user input
rustyline = "14"
dialoguer = "0.11"
