[package]
name = "sibyl"
version = "0.0.0"
description = "sibyl: webcodecs + iroh-blobs prototype"
authors = ["freqhole"]
edition = "2021"

[lib]
name = "sibyl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "sync", "macros"] }
anyhow = "1"
# native audio playback (always used for tauri builds; webkit2gtk has no AudioDecoder)
rodio = { version = "0.20", default-features = false, features = [
    "symphonia-all",
] }
# the actual library — transcode, iroh node, host, peer, ticket
sibyl-core = { path = "../core-rs" }
