[package]
name = "freqhole-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "freqhole_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
which = "7"
urlencoding = "2"
chrono = "0.4"
regex = "1"
lazy_static = "1"

# internal dependencies
grimoire = { path = "../../../grimoire", default-features = false }

[target."cfg(unix)".dependencies]
nix = { version = "0.29", features = ["signal"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
