[package]
name = "tauri-plugin-android-media-session"
version = "0.1.0"
edition = "2021"
description = "android lock screen / media notification controls for tauri"
links = "tauri-plugin-android-media-session"
publish = false

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
